<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Alarma">

    <Button
        android:id="@+id/btn_apagado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="544dp"
        android:layout_marginBottom="68dp"
        android:width="250dp"
        android:height="100dp"
        android:background="@drawable/side_nav_bar"
        android:onClick="apagar"
        android:text="@string/Titulobtn"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/alarma" />

    <TextView
        android:id="@+id/textViewDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="289dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="394dp"
        android:gravity="center"
        android:text="@string/Descripcion"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeMinTextSize="18sp" />

    <TextView
        android:id="@+id/textViewTemporizador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="335dp"
        android:layout_marginBottom="350dp"
        android:gravity="center"
        android:text="@string/Temporizadortxt"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible" />

</RelativeLayout>